--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"gen-srt": "node certificates.js",
+		"gen-crt": "node certificates.js",
 		"dev": "cross-env dotenv -e .env.local -- next dev -H 0.0.0.0",
 		"start": "cross-env dotenv -e .env.local -- next start -H 0.0.0.0",
 		"build": "next build",
